Closed
Bug 1428371
Opened 7 years ago
Closed 7 years ago
GeckoView example app crashes on startup with multiprocess enabled
Categories
(GeckoView :: General, defect)
Tracking
(firefox59 fixed)
RESOLVED
FIXED
mozilla59
| Tracking | Status | |
|---|---|---|
| firefox59 | --- | fixed |
People
(Reporter: esawin, Assigned: esawin)
References
Details
Attachments
(1 file)
|
767 bytes,
patch
|
masayuki
:
review+
|
Details | Diff | Splinter Review |
With multiprocess enabled, the example app crashes on startup before page load.
Regression from bug 1409113.
| Assignee | ||
Comment 1•7 years ago
|
||
InputContext::mHasHandlerUserInput appears to be uninitialized when accessed in GeckoEditableSupport::SetInputContext, which signals an erroneous user action.
Attachment #8940253 -
Flags: review?(masayuki)
| Assignee | ||
Comment 2•7 years ago
|
||
Bob, can you please verify that Autophone runs with e10s enabled? I'm surprised not to see the regression there.
Flags: needinfo?(bob)
Updated•7 years ago
|
Attachment #8940253 -
Flags: review?(masayuki) → review+
Comment 3•7 years ago
|
||
A[tier 2](tg)
<https://treeherder.mozilla.org/#/jobs?repo=mozilla-central&filter-searchStr=autophone&group_state=expanded&selectedJob=154987184>
<https://autophone.s3.amazonaws.com/v1/task/Q2a0oBwcSjeWFaCAnlBBQg/runs/0/artifacts/public/build/45f61b49-0deb-4df9-a39c-92556bad6e33-autophone.log>
am start uses --ez use_multiprocess False
A-e10s[tier 2](tg)
<https://treeherder.mozilla.org/#/jobs?repo=mozilla-central&filter-searchStr=autophone&group_state=expanded&selectedJob=154987195>
<https://autophone.s3.amazonaws.com/v1/task/Q2a0oBwcSjeWFaCAnlBBQg/runs/0/artifacts/public/build/b036df0c-4204-48a7-a86b-ec3683e820b0-autophone.log>
am start uses --ez use_multiprocess True
Is this not correct?
I am getting data:
<http://phonedash.mozilla.org/#/2018-01-08/2018-01-09/binning=repo-phonetype-phoneid-test_name&rejected=norejected&errorbars=noerrorbars&errorbartype=standarderror&valuetype=median&geckoview-e10s-nytimes=on&geckoview-nytimes=on&throbberstart=on&throbberstop=on&throbbertime=on&first=on&second=on&autoland=on&mozilla-beta=on&mozilla-central=on&mozilla-inbound=on&nexus-4=on&nexus-4-09=on&nexus-5=on&nexus-5-03=on&nexus-5-04=on&nexus-5-05=on&nexus-6p=on&nexus-6p-08=on&nexus-6p-10=on&nexus-6p-12=on&nexus-6p-13=on&pixel=on&pixel-02=on&pixel-04=on&pixel-11=on>
Flags: needinfo?(bob)
| Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/ed3d5e1ac862
Add missing member initialization in InputContext. r=masayuki
Keywords: checkin-needed
Comment 5•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox59:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 59
Updated•6 years ago
|
Product: Firefox for Android → GeckoView
Updated•6 years ago
|
Target Milestone: Firefox 59 → mozilla59
You need to log in
before you can comment on or make changes to this bug.
Description
•