Bug 1428371 - Add missing member initialization in InputContext. r=masayuki